--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^2.6.1",
     "node-sass": "^7.0.1",
     "path-browserify": "^1.0.1",
